# ml-atoken

./: .gitignore  .pre-commit-config.yaml  ACKNOWLEDGEMENTS  MODEL-LICENSE  README.md  download_checkpoints.sh  install_gs.sh  pyproject.toml  test_atoken.py
atoken_inference/: atoken_wrapper.py
atoken_inference/model/: __init__.py  autoencoder_kl.py  base_module.py  basic.py  data_utils.py  dataloader.py  decoder_gs.py  finite_scaler_quantize.py  linear.py  lookup_free_quantize.py  nonlinearity.py  norm.py  sparse_preprocessors.py  utils.py
atoken_inference/model/attention/: __init__.py  causal_attn.py  full_attn.py  modules.py  serialized_attn.py  windowed_attn.py
atoken_inference/model/transformer/: __init__.py  blocks.py  modulated.py
atoken_inference/scripts/: pack_multiview_feat.py
configs/: 3d_decode_gs.yaml  atoken-soc-s1.yaml  atoken-soc.yaml  atoken-sod.yaml
